corpus/expressions.txt
================================================================================
Assignment to Prefix Unary Expressions
================================================================================

a = +a;
a = -a;
a = !a;
a = ~a;
a = ++a;
a = --a;
a = a++;
a = a--;
a = a!;
--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (postfix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (postfix_unary_expression
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (postfix_unary_expression
          (identifier))))))

================================================================================
Assignment to Binary Expressions
================================================================================

a = a + a;
a = a - a;
a = a * a;
a = a / a;
a = a % a;
a = a & a;
a = a | a;
a = a ^ a;
a = a >> a;
a = a << a;
a = a >>> a;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Assignment to Binary Equality Expressions
================================================================================

a = a == b;
a = a != b;
a = a < b;
a = a <= b;
a = a > b;
a = a >= b;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier)))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (identifier)
          (identifier))))))

================================================================================
Assignment Binary Expressions
================================================================================

a += a;
a -= a;
a *= a;
a /= a;
a %= a;
a++;
a--;
a <<= a;
a >>= a;
a >>>= a;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (postfix_unary_expression
        (identifier))))
  (global_statement
    (expression_statement
      (postfix_unary_expression
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier))))
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (identifier)))))

================================================================================
Assignment LValue types
================================================================================

a = 1;
a.b = 1;
a[b] = 1;
(a, b) = (1, 2);
(var a, b) = (1, 2);
var x = new A
{
  a = 1,
  [b] = 1
};
(a) = 1;
*p = 0;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (integer_literal))))
  (global_statement
    (expression_statement
      (assignment_expression
        (member_access_expression
          (identifier)
          (identifier))
        (assignment_operator)
        (integer_literal))))
  (global_statement
    (expression_statement
      (assignment_expression
        (element_access_expression
          (identifier)
          (bracketed_argument_list
            (argument
              (identifier))))
        (assignment_operator)
        (integer_literal))))
  (global_statement
    (expression_statement
      (assignment_expression
        (tuple_expression
          (argument
            (identifier))
          (argument
            (identifier)))
        (assignment_operator)
        (tuple_expression
          (argument
            (integer_literal))
          (argument
            (integer_literal))))))
  (global_statement
    (expression_statement
      (assignment_expression
        (tuple_expression
          (argument
            (declaration_expression
              (implicit_type)
              (identifier)))
          (argument
            (identifier)))
        (assignment_operator)
        (tuple_expression
          (argument
            (integer_literal))
          (argument
            (integer_literal))))))
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (object_creation_expression
              (identifier)
              (initializer_expression
                (assignment_expression
                  (identifier)
                  (assignment_operator)
                  (integer_literal))
                (assignment_expression
                  (element_binding_expression
                    (bracketed_argument_list
                      (argument
                        (identifier))))
                  (assignment_operator)
                  (integer_literal)))))))))
  (global_statement
    (expression_statement
      (assignment_expression
        (parenthesized_expression
          (identifier))
        (assignment_operator)
        (integer_literal))))
  (global_statement
    (expression_statement
      (assignment_expression
        (prefix_unary_expression
          (identifier))
        (assignment_operator)
        (integer_literal)))))

================================================================================
Ternary Expression
================================================================================

class Foo {
  void Test() {
    var y = x ? "foo" : "bar";
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_declaration_statement
            (variable_declaration
              type: (implicit_type)
              (variable_declarator
                (identifier)
                (equals_value_clause
                  (conditional_expression
                    condition: (identifier)
                    consequence: (string_literal)
                    alternative: (string_literal)))))))))))

================================================================================
Binary Expressions
================================================================================

class Foo {
  void Test() {
    var b = x == y;
    var i = 1 + 2;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (method_declaration
        type: (predefined_type)
        name: (identifier)
        parameters: (parameter_list)
        body: (block
          (local_declaration_statement
            (variable_declaration
              type: (implicit_type)
              (variable_declarator
                (identifier)
                (equals_value_clause
                  (binary_expression
                    left: (identifier)
                    right: (identifier))))))
          (local_declaration_statement
            (variable_declaration
              type: (implicit_type)
              (variable_declarator
                (identifier)
                (equals_value_clause
                  (binary_expression
                    left: (integer_literal)
                    right: (integer_literal)))))))))))

================================================================================
Ternary expressions is type
================================================================================

var t = x is int
  ? a
  : b;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (conditional_expression
              (is_expression
                (identifier)
                (predefined_type))
              (identifier)
              (identifier))))))))

================================================================================
Ternary expressions is nullable type
================================================================================

var u = x is int?
  ? a
  : b;

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (conditional_expression
              (is_expression
                (identifier)
                (nullable_type
                  (predefined_type)))
              (identifier)
              (identifier))))))))

================================================================================
Prefix-Unary Expressions
================================================================================

class Foo {
  void Test() {
    ++x;
    --y;
  }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    (identifier)
    (declaration_list
      (method_declaration
        (predefined_type)
        (identifier)
        (parameter_list)
        (block
          (expression_statement
            (prefix_unary_expression
              (identifier)))
          (expression_statement
            (prefix_unary_expression
              (identifier))))))))

================================================================================
Cast expressions
================================================================================

void Test() {
  a = (B)c + (C)d;
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (binary_expression
              (cast_expression
                (identifier)
                (identifier))
              (cast_expression
                (identifier)
                (identifier)))))))))

================================================================================
Cast expression of array access
================================================================================

b = (float)a[0];

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (cast_expression
          (predefined_type)
          (element_access_expression
            (identifier)
            (bracketed_argument_list
              (argument
                (integer_literal)))))))))

================================================================================
Cast with parenthesized expression
================================================================================

var o = (A.A)(a.a.a);
var o = (Int32)(1);
var o = (Int32)(1);
var o = (Int32)((1));

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (cast_expression
              (qualified_name
                (identifier)
                (identifier))
              (parenthesized_expression
                (member_access_expression
                  (member_access_expression
                    (identifier)
                    (identifier))
                  (identifier)))))))))
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (cast_expression
              (identifier)
              (parenthesized_expression
                (integer_literal))))))))
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (cast_expression
              (identifier)
              (parenthesized_expression
                (integer_literal))))))))
  (global_statement
    (local_declaration_statement
      (variable_declaration
        (implicit_type)
        (variable_declarator
          (identifier)
          (equals_value_clause
            (cast_expression
              (identifier)
              (parenthesized_expression
                (parenthesized_expression
                  (integer_literal))))))))))

================================================================================
Precedence of unary prefix operator and element access
================================================================================

b = +a[0];

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (prefix_unary_expression
          (element_access_expression
            (identifier)
            (bracketed_argument_list
              (argument
                (integer_literal)))))))))

================================================================================
Precedence of switch_expression and binary_expression
================================================================================

b = 2 * a switch
{
    1 => 1,
    _ => 0,
};

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (expression_statement
      (assignment_expression
        (identifier)
        (assignment_operator)
        (binary_expression
          (integer_literal)
          (switch_expression
            (identifier)
            (switch_expression_arm
              (constant_pattern
                (integer_literal))
              (integer_literal))
            (switch_expression_arm
              (discard)
              (integer_literal))))))))

================================================================================
Anonymous object creation with empty body
================================================================================

void b() {
  var x = new {
  };
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression)))))))))

================================================================================
Target-type object creation
================================================================================

void b() {
  Friend friend = new("hi");
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (identifier)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (implicit_object_creation_expression
                  (argument_list
                    (argument
                      (string_literal))))))))))))

================================================================================
Anonymous object creation with single unnamed
================================================================================

void b() {
  var x = new {
    args
  };
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression
                  (identifier))))))))))

================================================================================
Anonymous object creation with single named
================================================================================

void b() {
  var x = new {
    test = "This"
  };
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (anonymous_object_creation_expression
                  (name_equals
                    (identifier))
                  (string_literal))))))))))

================================================================================
Checked expressions
================================================================================

void b() {
  var three = checked(1 + 2);
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (checked_expression
                  (binary_expression
                    (integer_literal)
                    (integer_literal)))))))))))

================================================================================
Object creation expressions
================================================================================

void b() {
  new C.D(1, "hi");
  a = new E
  {
    Foo = bar,
  };

  b = new E(1);

  c = new E(1) { };
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (object_creation_expression
            (qualified_name
              (identifier)
              (identifier))
            (argument_list
              (argument
                (integer_literal))
              (argument
                (string_literal)))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (initializer_expression
                (assignment_expression
                  (identifier)
                  (assignment_operator)
                  (identifier))))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (argument_list
                (argument
                  (integer_literal))))))
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (object_creation_expression
              (identifier)
              (argument_list
                (argument
                  (integer_literal)))
              (initializer_expression))))))))

================================================================================
Named parameters in constructors
================================================================================

void b() {
  var z = new C(a: 1, b: "hi");
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (object_creation_expression
                  (identifier)
                  (argument_list
                    (argument
                      (name_colon
                        (identifier))
                      (integer_literal))
                    (argument
                      (name_colon
                        (identifier))
                      (string_literal))))))))))))

================================================================================
Named parameters in method calls
================================================================================

void b() {
  z = A.B(a: 1, b: "hi");
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (invocation_expression
              (member_access_expression
                (identifier)
                (identifier))
              (argument_list
                (argument
                  (name_colon
                    (identifier))
                  (integer_literal))
                (argument
                  (name_colon
                    (identifier))
                  (string_literal))))))))))

================================================================================
Named parameters using contextually reserved words
================================================================================

void b() {
  resultNode  = B(from: 1, into: "hi");
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (expression_statement
          (assignment_expression
            (identifier)
            (assignment_operator)
            (invocation_expression
              (identifier)
              (argument_list
                (argument
                  (name_colon
                    (identifier))
                  (integer_literal))
                (argument
                  (name_colon
                    (identifier))
                  (string_literal))))))))))

================================================================================
Anonymous method expressions
================================================================================

void a() {
  var d = delegate(int a) {
    return a;
  };
}

--------------------------------------------------------------------------------

(compilation_unit
  (global_statement
    (local_function_statement
      (predefined_type)
      (identifier)
      (parameter_list)
      (block
        (local_declaration_statement
          (variable_declaration
            (implicit_type)
            (variable_declarator
              (identifier)
              (equals_value_clause
                (anonymous_method_expression
                  (parameter_list
                    (parameter
                      (predefined_type)
                      (identifier)))
                  (block
                    (return_statement
                      (identifier))))))))))))
